feat: schema change, class & student register APIs

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
+# Database Configuration
 DB_USER=root
 DB_HOST=localhost
 DB_PORT=3306
 DB_PASSWORD=password
-DB_NAME=app
+DB_NAME=student_manage
+
+# Application Configuration
+NODE_ENV=development
+PORT=3000
+
+# Classes Configuration
+MAX_STUDENTS_PER_CLASS=30
